--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:ts": "tsc",
     "lint": "biome check src",
     "lint:fix": "biome check src --write --unsafe",
-    "test": "npm run lint && npm run test:ts",
+    "test:storybook": "test-storybook",
+    "test:storybook:dev": "test-storybook --watch",
+    "test": "npm run lint && npm run test:ts && npm run test:storybook",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -53,9 +55,13 @@
     "@storybook/addon-links": "^8.3.5",
     "@storybook/addon-onboarding": "^8.3.5",
     "@storybook/blocks": "^8.3.5",
+    "@storybook/channels": "^8.3.5",
+    "@storybook/core-events": "^8.3.5",
     "@storybook/react": "^8.3.5",
     "@storybook/react-vite": "^8.3.5",
     "@storybook/test": "^8.3.5",
+    "@storybook/test-runner": "^0.19.1",
+    "@storybook/testing-library": "^0.2.1",
     "@types/react": "^18.3.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
