--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:ts": "tsc",
     "lint": "biome check src",
     "lint:fix": "biome check src --write --unsafe",
-    "test:storybook": "test-storybook",
+    "test:storybook": "test-storybook --coverage",
     "test:storybook:dev": "test-storybook --watch",
     "test": "npm run lint && npm run test:ts && npm run test:storybook",
     "storybook": "storybook dev -p 6006",
@@ -45,31 +45,29 @@
   },
   "homepage": "https://github.com/vtaits/react-signals#readme",
   "peerDependencies": {
-    "react": "^17.0.0 || ^18.0.0",
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "signal-polyfill": "^0.2.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@chromatic-com/storybook": "^2.0.2",
-    "@storybook/addon-essentials": "^8.3.6",
-    "@storybook/addon-interactions": "^8.3.6",
-    "@storybook/addon-links": "^8.3.6",
-    "@storybook/addon-onboarding": "^8.3.6",
-    "@storybook/blocks": "^8.3.6",
-    "@storybook/channels": "^8.3.6",
-    "@storybook/core-events": "^8.3.6",
-    "@storybook/react": "^8.3.6",
-    "@storybook/react-vite": "^8.3.6",
-    "@storybook/test": "^8.3.6",
-    "@storybook/test-runner": "^0.19.1",
-    "@storybook/testing-library": "^0.2.2",
-    "@types/react": "^18.3.11",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@storybook/addon-coverage": "^1.0.4",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/channels": "^8.4.7",
+    "@storybook/core-events": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@storybook/test-runner": "^0.20.1",
+    "@types/react": "^19.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "signal-polyfill": "^0.2.1",
-    "storybook": "^8.3.6",
-    "tsup": "^8.3.0",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.3"
+    "storybook": "^8.4.7",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
