--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:ts": "tsc",
     "lint": "biome check src",
     "lint:fix": "biome check src --write --unsafe",
-    "test:storybook": "test-storybook --coverage",
+    "test:storybook": "test-storybooks",
     "test:storybook:dev": "test-storybook --watch",
     "test": "npm run lint && npm run test:ts && npm run test:storybook",
     "storybook": "storybook dev -p 6006",
@@ -49,25 +49,16 @@
     "signal-polyfill": "^0.2.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@storybook/addon-coverage": "^1.0.4",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/channels": "^8.4.7",
-    "@storybook/core-events": "^8.4.7",
-    "@storybook/react": "^8.4.7",
-    "@storybook/react-vite": "^8.4.7",
-    "@storybook/test": "^8.4.7",
-    "@storybook/test-runner": "^0.20.1",
-    "@types/react": "^19.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "signal-polyfill": "^0.2.1",
-    "storybook": "^8.4.7",
-    "tsup": "^8.3.5",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
+    "@biomejs/biome": "^2.0.0",
+    "@storybook/react-vite": "^9.0.12",
+    "@storybook/test-runner": "^0.23.0",
+    "@types/react": "^19.1.8",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "signal-polyfill": "^0.2.2",
+    "storybook": "^9.0.12",
+    "tsup": "^8.5.0",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
